--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".App"
+        android:name="com.example.cocktailboxcompose.App"
         android:theme="@style/Theme.MyComposeSkeleton"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.cocktailboxcompose.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MyComposeSkeleton">
             <intent-filter>
